cmake_minimum_required(VERSION 3.0.0)
project(BleRffSniffer)
set(projectDir /home/gnu/Desktop/BleRffSniffer/)
aux_source_directory(${projectDir}/src srcList)
include_directories(${projectDir}/include)
link_directories(/usr/local/lib)
add_executable(main ${srcList})
target_link_libraries(main -lbladeRF)